--- a/app/views/partials/lib/commands/groups/create.liquid
+++ b/app/views/partials/lib/commands/groups/create.liquid
@@ -1,10 +1,13 @@
 {%  liquid
-  function object = 'lib/commands/groups/create/build', object: context.params.group, owner_id: context.current_user.id
-  echo object
+  function object = 'lib/commands/groups/create/build', object: object, owner_id: owner_id
   function object = 'lib/commands/groups/create/check', object: object
 
   if object.valid
     function object = 'lib/commands/execute', mutation_name: 'groups/create' object: object
+
+    assign now = 'now' | to_time
+    function relation = 'lib/commands/relationships/create', name: 'owner', l_id: owner_id, r_id: object.id, l_at: now, r_at: now
+    log relation
   endif
 
   return object
