--- a/app/views/partials/theme/simple/groups/show.liquid
+++ b/app/views/partials/theme/simple/groups/show.liquid
@@ -12,7 +12,14 @@
   <div>
     {% liquid
       assign file = 'theme/simple/groups/' | append: tab
-      include file, list: list, group: group
+      case tab
+      when 'activity'
+        render 'theme/simple/groups/about', list: list, group: group
+      when 'about'
+        render 'theme/simple/groups/about', list: list, group: group
+      when 'members'
+        render 'theme/simple/groups/members', list: list, group: group
+      endcase
     %}
   </div>
 </div>
