--- a/app/views/partials/theme/simple/profile/sections/followers.liquid
+++ b/app/views/partials/theme/simple/profile/sections/followers.liquid
@@ -2,7 +2,7 @@
   <div class="container md:px-5 md:py-5 mx-auto">
     <div class="flex flex-wrap -mx-4">
       {% for record in list.results %}
-        {% render 'theme/simple/profile/user_card', user: record.lu, current_user: current_user %}
+        {% render 'theme/simple/profile/user_card', user: record.l, current_user: current_user %}
       {% else %}
         <p class="container my-8 text-lg mx-4">{{ 'app.no_items_found' | t }}</p>
       {% endfor %}
