--- a/app/views/partials/theme/simple/profile/sections/following.liquid
+++ b/app/views/partials/theme/simple/profile/sections/following.liquid
@@ -1,8 +1,8 @@
 <section class="text-gray-700 body-font">
   <div class="container md:px-5 md:py-5 mx-auto">
     <div class="flex flex-wrap -mx-4">
-      {% for record in list.results %}
-        {% render 'theme/simple/profile/user_card', user: record.ru, current_user: current_user %}
+      {% for relation in list.results %}
+        {% render 'theme/simple/profile/user_card', user: relation.r, current_user: current_user %}
       {% else %}
         <p class="container my-8 text-lg mx-4">{{ 'app.no_items_found' | t }}</p>
       {% endfor %}
