--- a/app/views/partials/theme/simple/profile/show.liquid
+++ b/app/views/partials/theme/simple/profile/show.liquid
@@ -15,16 +15,15 @@
       render 'theme/simple/profile/nav', tab: section, user: user
 
       if section == 'activity'
-        render 'theme/simple/profile/sections/activity', list: list, user: user
+        render 'theme/simple/profile/sections/activity', list: list, current_user: current_user
       elsif section == 'groups'
-        render 'theme/simple/profile/sections/groups', list: list, user: user
+        render 'theme/simple/profile/sections/groups', list: list, current_user: current_user
       elsif section == 'following'
-        render 'theme/simple/profile/sections/following', list: list, user: user
+        render 'theme/simple/profile/sections/following', list: list, current_user: current_user
       elsif section == 'followers'
-        render 'theme/simple/profile/sections/followers', list: list, user: user
+        render 'theme/simple/profile/sections/followers', list: list, current_user: current_user
       endif
     %}
   </div>
 </div>
 
-{% render 'theme/simple/items/follow.js' %}
