--- a/app/views/partials/theme/simple/profile/card.liquid
+++ b/app/views/partials/theme/simple/profile/card.liquid
@@ -11,11 +11,11 @@
 
   <div class="mr-10">
     <div class="mb-4">
-      <div class="text-3xl font-medium text-grey-darkest" id="user-name">
+      <div class="text-xl font-medium text-grey-darkest" id="user-name">
         {{ user.first_name }} {{ user.last_name }}
       </div>
-      <div class="text-xl text-grey-dark font-light" id="username">
-        {{ user.name }}
+      <div class="text-normal text-grey-dark font-light" id="username">
+        {{ user.bio }}
       </div>
     </div>
   </div>
