--- a/app/views/pages/dashboard/index.liquid
+++ b/app/views/pages/dashboard/index.liquid
@@ -1,8 +1,10 @@
 {% liquid
-  function profile = 'lib/must_be_authenticated'
-  include 'lib/validate_profile_completness', profile: profile
+  include 'lib/must_be_authenticated'
 
-  include 'lib/commands/events/create', type: 'page_visited', actor_id: profile.id, object: context.location
+  function current_user = 'lib/data/queries/profiles/find', user_id: context.current_user.id
+  include 'lib/validate_profile_completness', profile: current_user
 
-  include 'theme/simple/dashboard/index', profile: profile
+  include 'lib/commands/events/create', type: 'page_visited', actor_id: current_user.id, object: context.location
+
+  include 'theme/simple/dashboard/index', profile: current_user
 %}
