--- a/app/views/pages/dashboard/profile/update.liquid
+++ b/app/views/pages/dashboard/profile/update.liquid
@@ -3,9 +3,10 @@ slug: dashboard/profile
 method: put
 ---
 {% liquid
-  function profile = 'lib/must_be_authenticated'
+  include 'lib/must_be_authenticated'
+  function current_user = 'lib/data/queries/profiles/find', user_id: context.current_user.id
 
-  function object = 'lib/commands/profiles/update', object: context.params.profile, profile: profile
+  function object = 'lib/commands/profiles/update', object: context.params.profile, profile: current_user
   if object.valid
     include 'redirect_to', url: '/dashboard'
   else
