--- a/app/views/partials/theme/simple/dashboard/profile/edit.liquid
+++ b/app/views/partials/theme/simple/dashboard/profile/edit.liquid
@@ -9,7 +9,7 @@
 
       <div class="mb-6" id="field-userName">
         <label class="block text-black cursor-pointer mb-2" for="name">{{'app.profiles.username' | t}}</label>
-        <input id="user-name" name="profile[name]" value="{{ object.name }}" type="text" maxlength="45" aria-invalid="false" aria-describedby="character-counter-firstName" class="form-input w-full disabled:opacity-50" data-label="First Name" autocomplete="given-name">
+        <input id="user-name" name="profile[name]" value="{{ object.name }}" type="text" maxlength="45" aria-invalid="false" aria-describedby="character-counter-userName" class="form-input w-full disabled:opacity-50" data-label="First Name" autocomplete="given-name">
         {% render 'theme/simple/field_error', errors: object.errors.name %}
       </div>
 
@@ -23,6 +23,12 @@
         <label class="block text-black cursor-pointer mb-2" for="last-name">{{'app.profiles.last_name' | t}}</label>
         <input id="last-name" name="profile[last_name]" value="{{ object.last_name }}" type="text" maxlength="45" aria-invalid="false" aria-describedby="character-counter-lastName" class="form-input w-full disabled:opacity-50" data-label="Last Name" autocomplete="family-name">
         {% render 'theme/simple/field_error', errors: object.errors.last_name %}
+      </div>
+
+      <div class="mb-6" id="field-bio">
+        <label class="block text-black cursor-pointer mb-2" for="bio">{{'app.profiles.bio' | t}}</label>
+        <textarea id="first-name" name="profile[bio]"aria-invalid="false" aria-describedby="character-counter-bio" class="form-input w-full disabled:opacity-50" data-label="Bio" autocomplete="bio">{{ object.bio }}</textarea>
+        {% render 'theme/simple/field_error', errors: object.errors.bio %}
       </div>
 
       <div class="flex mt-4">
