--- a/app/views/pages/items/create.liquid
+++ b/app/views/pages/items/create.liquid
@@ -3,15 +3,16 @@ method: post
 ---
 {% liquid
   include 'lib/must_be_authenticated'
+  function current_user = 'lib/data/queries/profiles/find', user_id: context.current_user.id
 
-  function_rc object = 'lib/commands/items/create/build', object: context.params.item, owner: context.current_user.id
+  function_rc object = 'lib/commands/items/create/build', object: context.params.item, owner: current_user.id
   function_rc object = 'lib/commands/items/create/check', object: object
 
   if object.valid
     function_rc object = 'lib/commands/items/create/execute', object: object
 
     if object.valid
-      include 'lib/commands/events/create', type: 'item_created', actor_id: context.current_user.id, object_id: object.id
+      include 'lib/commands/events/create', type: 'item_created', actor_id: current_user.id, object_id: object.id
 
       function_rc url = 'link_to', path: '/items/', item: object
       include 'redirect_to', url: url, notice: 'app.items.created'
