--- a/app/views/pages/items/delete.liquid
+++ b/app/views/pages/items/delete.liquid
@@ -3,11 +3,13 @@ method: post
 ---
 {% liquid
   include 'lib/must_be_authenticated'
+  function current_user = 'lib/data/queries/profiles/find', user_id: context.current_user.id
 
   function_rc item = 'lib/data/queries/items/find', id: context.params.id, withOrders: true
   function_rc object = 'lib/commands/items/delete', item: item
 
   if object.valid
+    include 'lib/commands/events/create', type: 'item_deleted', actor_id: current_user.id, object_id: item.id
     include 'redirect_to', url: '/dashboard/sell/items', notice: 'app.items.deleted'
   else
     assign error = object.errors.base[0]
