--- a/app/views/pages/items/show.liquid
+++ b/app/views/pages/items/show.liquid
@@ -4,6 +4,7 @@ slug: items
 
 {% liquid
   function current_user = 'lib/data/queries/profiles/find', user_id: context.current_user.id, followships: true
+  include 'lib/validate_profile_completness', profile: current_user
 
   assign id = context.params.slug2 | split: '-' | last
   function item = 'lib/data/queries/items/find', id: id
