--- a/app/views/pages/groups/about.liquid
+++ b/app/views/pages/groups/about.liquid
@@ -8,7 +8,7 @@
     break
   endunless
 
-  function_rc current_user = 'lib/data/queries/users/find', id: context.current_user.id
+  function_rc current_user = 'lib/data/queries/profiles/find', user_id: context.current_user.id
 
   include 'theme/simple/groups/show', group: group, current_user: current_user, tab: 'about'
 %}
