--- a/app/views/pages/users/listing.liquid
+++ b/app/views/pages/users/listing.liquid
@@ -14,4 +14,5 @@ slug: u
   function filters = 'lib/data/queries/search/filters', query: context.params
 
   include 'theme/simple/users/listing', items: items, filters: filters, user: user, current_user: current_user
+  render 'theme/simple/items/follow.js', authenticity_token: context.authenticity_token
 %}
