--- a/app/views/partials/theme/simple/profile/card.liquid
+++ b/app/views/partials/theme/simple/profile/card.liquid
@@ -15,6 +15,9 @@
         {{ user.first_name }} {{ user.last_name }}
       </div>
       <div class="text-normal text-grey-dark font-light" id="username">
+        {{ user.name }}
+      </div>
+      <div class="text-xs text-grey-dark font-light" id="bio">
         {{ user.bio }}
       </div>
     </div>
