--- a/app/views/pages/dashboard/sell/items/index.liquid
+++ b/app/views/pages/dashboard/sell/items/index.liquid
@@ -1,7 +1,8 @@
 {% liquid
   include 'lib/must_be_authenticated'
+  function current_user = 'lib/data/queries/profiles/find', user_id: context.current_user.id
 
-  function_rc items = 'lib/data/queries/items/search', limit: 100, owner: context.current_user.id
+  function_rc items = 'lib/data/queries/items/search', limit: 100, owner: current_user.id
 
   include 'theme/simple/dashboard/breadcrumbs', name: 'items', total_entries: items.total_entries, role: 'seller'
   include 'theme/simple/dashboard/items/index', items: items, role: 'seller'
