--- a/app/views/pages/items/edit.liquid
+++ b/app/views/pages/items/edit.liquid
@@ -1,5 +1,6 @@
 {% liquid
   include 'lib/must_be_authenticated'
+  function current_user = 'lib/data/queries/profiles/find', user_id: context.current_user.id
 
   function_rc item = 'lib/data/queries/items/find', id: params.id
 
@@ -8,7 +9,7 @@
     break
   endunless
 
-  include 'lib/can_edit', user_id: context.current_user.id, item: item
+  include 'lib/can_edit', user_id: current_user.id, item: item
 
   function_rc filters = 'lib/data/queries/search/filters'
   function_rc presigned_url = 'lib/data/queries/presigned_url'
