--- a/app/views/pages/items/show.liquid
+++ b/app/views/pages/items/show.liquid
@@ -14,6 +14,6 @@ slug: items
     break
   endunless
 
-  render 'theme/simple/items/show', item: item, current_user: current_user
+  render 'theme/simple/items/show', item: item, current_user: current_user, authenticity_token: context.authenticity_token
   render 'theme/simple/items/follow.js', authenticity_token: context.authenticity_token
 %}
