--- a/app/views/pages/items/delete.liquid
+++ b/app/views/pages/items/delete.liquid
@@ -5,8 +5,8 @@ method: post
   include 'lib/must_be_authenticated'
   function current_user = 'lib/data/queries/profiles/find', user_id: context.current_user.id
 
-  function_rc item = 'lib/data/queries/items/find', id: context.params.id, withOrders: true
-  function_rc object = 'lib/commands/items/delete', item: item
+  function item = 'lib/data/queries/items/find', id: context.params.id, withOrders: true
+  function object = 'lib/commands/items/delete', item: item
 
   if object.valid
     include 'lib/commands/events/create', type: 'item_deleted', actor_id: current_user.id, object_id: item.id
@@ -14,7 +14,7 @@ method: post
   else
     assign error = object.errors.base[0]
 
-    function_rc item_url = 'link_to', path: '/items/', item: item
+    function item_url = 'link_to', path: '/items/', item: item
     include 'redirect_to', url: item_url, error: error
   endif
 %}
