--- a/app/views/pages/order_statuses/create.liquid
+++ b/app/views/pages/order_statuses/create.liquid
@@ -4,7 +4,10 @@ slug: order_statuses/create
 ---
 
 {% liquid
-  function_rc object = 'lib/commands/order_statuses/create', order_id: context.params.order_id, current_user_id: context.current_user.id, name: context.params.status
+  include 'lib/must_be_authenticated'
+  function current_user = 'lib/data/queries/profiles/find', user_id: context.current_user.id
+
+  function_rc object = 'lib/commands/order_statuses/create', order_id: context.params.order_id, current_user_id: current_user.id, name: context.params.status
 
   if object.valid
       include "redirect_to", url: "/dashboard", notice: 'app.orders.status.updated'
