--- a/app/views/pages/orders/create.liquid
+++ b/app/views/pages/orders/create.liquid
@@ -3,25 +3,18 @@ method: post
 ---
 
 {% liquid
-  function_rc item = 'lib/data/queries/items/find', id: context.params.item_id
+  include 'lib/must_be_authenticated'
+  function current_user = 'lib/data/queries/profiles/find', user_id: context.current_user.id
+  function item = 'lib/data/queries/items/find', id: context.params.item_id
 
-  function_rc object = 'lib/commands/orders/create/build', item: item, current_user_id: context.current_user.id
-  function_rc object = 'lib/commands/orders/create/check', object: object
+  function object = 'lib/commands/orders/create', item: item, current_user: current_user
 
   if object.valid
-    function_rc object = 'lib/commands/orders/create/execute', object: object
+    function status = 'lib/commands/order_statuses/create', order: object, current_user_id: current_user.id, name: 'app.order_statuses.placed'
 
-    if object.valid
-      function_rc status = 'lib/commands/order_statuses/create', order: object, current_user_id: context.current_user.id, name: 'app.order_statuses.placed'
+    include 'lib/commands/events/create', type: 'order_created', actor_id: object.buyer.id, target_id: context.params.item_id, object_id: object.id
 
-      include 'lib/commands/events/create', type: 'order_created', actor_id: object.buyer.id, target_id: context.params.item_id, object_id: object.id
-
-      include 'lib/flash/publish', notice: 'app.orders.created'
-      include 'redirect_to', url: '/dashboard/buy/orders'
-    else
-      redirect_to '/500'
-      break
-    endif
+    include 'redirect_to', url: '/dashboard/buy/orders', notice:  'app.orders.created'
   else
     include 'theme/simple/orders/new', item: item, order: object
   endif
