--- a/app/views/partials/theme/simple/comments/new_entry.liquid
+++ b/app/views/partials/theme/simple/comments/new_entry.liquid
@@ -3,6 +3,7 @@
   {% liquid
     assign uuid = '' | uuid
   %}
+  <input type="hidden" name="comment[commentable_id]" value="{{commentable.id}}" />
   <input type="hidden" name="comment[commentable_uuid]" value="{{commentable.uuid}}" />
   <input type="hidden" name="comment[commentable_type]" value="{{commentable_type}}" />
   <input type="hidden" name="comment[uuid]" value="{{uuid}}" />
