--- a/app/views/pages/comments/create.liquid
+++ b/app/views/pages/comments/create.liquid
@@ -4,10 +4,12 @@ method: post
 ---
 {% liquid
   include 'lib/must_be_authenticated'
+  function current_user = 'lib/data/queries/profiles/find', user_id: context.current_user.id
 
-  function object = 'lib/commands/comments/create', object: context.params.comment
+  function object = 'lib/commands/comments/create', object: context.params.comment, current_user: current_user
+
   if object.valid
-    include 'lib/commands/events/create', type: 'comment_created', actor_id: context.current_user.id, object_id: object.id
+    include 'lib/commands/events/create', type: 'comment_created', actor_id: current_user.id, object_id: object.id, target_id: context.params.comment.commentable_id
     redirect_to context.params.return_to
   endif
 %}
