--- a/app/views/partials/theme/simple/home/index.liquid
+++ b/app/views/partials/theme/simple/home/index.liquid
@@ -1,4 +1,4 @@
-<form action="/s" name="search">
+<form action="/search" name="search">
   {% include 'theme/simple/home/search_form', query: search.query, filters: filters %}
   {% include 'theme/simple/items/index', items: items %}
 </form>
