--- a/app/views/pages/items/edit.liquid
+++ b/app/views/pages/items/edit.liquid
@@ -1,3 +1,10 @@
+---
+metadata:
+  breadcrumbs:
+    - url: /dashboard/sell/items
+      label: app.items.list
+    - label: app.edit
+---
 {% liquid
   include 'lib/must_be_authenticated'
   function current_user = 'lib/data/queries/profiles/find', user_id: context.current_user.id
@@ -14,5 +21,6 @@
   function_rc filters = 'lib/data/queries/search/filters'
   function_rc presigned_url = 'lib/data/queries/presigned_url'
 
+  include 'theme/simple/dashboard/breadcrumbs'
   include 'theme/simple/items/edit', item: item, lib: filters, presigned_url: presigned_url, user: context.current_user
 %}
