--- a/app/views/pages/dashboard/buy/orders/index.liquid
+++ b/app/views/pages/dashboard/buy/orders/index.liquid
@@ -1,3 +1,9 @@
+---
+metadata:
+  breadcrumbs:
+    - label: app.buyer
+    - label: app.orders.list
+---
 {% liquid
   include 'lib/must_be_authenticated'
   function current_user = 'lib/data/queries/profiles/find', user_id: context.current_user.id
