--- a/app/views/pages/dashboard/groups/new.liquid
+++ b/app/views/pages/dashboard/groups/new.liquid
@@ -1,3 +1,10 @@
+---
+metadata:
+  breadcrumbs:
+    - url: /dashboard/groups
+      label: app.groups.list
+    - label: app.groups.new
+---
 {% liquid
   include 'lib/must_be_authenticated'
 
