--- a/app/views/pages/items/new.liquid
+++ b/app/views/pages/items/new.liquid
@@ -1,8 +1,16 @@
+---
+metadata:
+  breadcrumbs:
+    - url: /dashboard/sell/items
+      label: app.items.list
+    - label: app.new
+---
 {% liquid
   include 'lib/must_be_authenticated'
 
   function_rc filters = 'lib/data/queries/search/filters', query: context.params
   function_rc presigned_url = 'lib/data/queries/presigned_url'
 
+  include 'theme/simple/dashboard/breadcrumbs'
   include 'theme/simple/items/new', lib: filters, presigned_url: presigned_url, user: context.current_user
 %}
