--- a/app/views/pages/payments/account.liquid
+++ b/app/views/pages/payments/account.liquid
@@ -1,6 +1,12 @@
+---
+metadata:
+  breadcrumbs:
+    - label: app.payments.account.bank_account
+---
 {% liquid
   function_rc account = 'modules/stripe/lib/payments/account'
 
+  include 'theme/simple/dashboard/breadcrumbs'
   if account.id
     include 'theme/simple/payments/account/show', account: account
   else
