--- a/app/views/partials/theme/simple/dashboard/profile/edit.liquid
+++ b/app/views/partials/theme/simple/dashboard/profile/edit.liquid
@@ -40,7 +40,7 @@
   <div class="sm:order-1 sm:flex">
     <div class="flex flex-col w-full text-center mb-6">
       <span class="block mb-2 text-black">{{'app.profiles.profile_photo' | t}}</span>
-      <div class="mr-10">
+      <div>
         {% liquid
           assign img_url = object.avatar.photo.versions.small
           unless img_url
@@ -49,7 +49,7 @@
         %}
         <img src="{{ img_url }}" alt="" class="w-64 h-64 mx-auto rounded-full object-cover object-center shadow-md md:mx-0 text-gray-400">
       </div>
-      <div class="w-64">
+      <div class="w-64 mt-10">
         {% render 'theme/simple/photos/uppy_area' %}
       </div>
     </div>
