--- a/app/views/pages/dashboard/index.liquid
+++ b/app/views/pages/dashboard/index.liquid
@@ -1,9 +1,11 @@
 {% liquid
-  include 'lib/must_be_authenticated'
+  function current_user = 'lib/current_profile', user_id: context.current_user.id, required: true
 
-  function current_user = 'lib/data/queries/profiles/find', user_id: context.current_user.id
-  include 'lib/validate_profile_completness', profile: current_user
+  include 'lib/validate_profile_completeness', profile: current_user
 
+  comment
+  test
+  endcomment
   include 'lib/commands/events/create', type: 'page_visited', actor_id: current_user.id, object: context.location
 
   include 'theme/simple/dashboard/index', profile: current_user
