--- a/app/views/pages/feed/index.liquid
+++ b/app/views/pages/feed/index.liquid
@@ -1,5 +1,6 @@
 {% liquid
-  function current_user = 'lib/data/queries/profiles/find', user_id: context.current_user.id, followships: false
+  function current_user = 'lib/current_profile', user_id: context.current_user.id, required: true
+  include 'lib/validate_profile_completeness', profile: current_user
 
   function list = 'lib/data/queries/activities/search', feed: 'user-private', feed_id: current_user.id, limit: 100
 
