refactor must_be_authenticated

--- a/app/views/pages/dashboard/buy/orders/index.liquid
+++ b/app/views/pages/dashboard/buy/orders/index.liquid
@@ -5,8 +5,7 @@ metadata:
     - label: app.orders.list
 ---
 {% liquid
-  include 'lib/must_be_authenticated'
-  function current_user = 'lib/data/queries/profiles/find', user_id: context.current_user.id
+  function current_user = 'lib/current_profile', user_id: context.current_user.id, required: true
 
   function orders = 'lib/data/queries/orders/search', limit: 100, buyer: current_user.id
 
