--- a/app/views/pages/dashboard/profile/edit.liquid
+++ b/app/views/pages/dashboard/profile/edit.liquid
@@ -1,7 +1,5 @@
 {% liquid
-  include 'lib/must_be_authenticated'
-
-  function current_user = 'lib/data/queries/profiles/find', user_id: context.current_user.id
+  function current_user = 'lib/current_profile', user_id: context.current_user.id, required: true
 
   graphql presigned_url = 'photos/presign' | dig: 'presigned'
 
