--- a/app/views/pages/dashboard/profile/update.liquid
+++ b/app/views/pages/dashboard/profile/update.liquid
@@ -3,8 +3,7 @@ slug: dashboard/profile
 method: put
 ---
 {% liquid
-  include 'lib/must_be_authenticated'
-  function current_user = 'lib/data/queries/profiles/find', user_id: context.current_user.id
+  function current_user = 'lib/current_profile', user_id: context.current_user.id, required: true
 
   function object = 'lib/commands/profiles/update', object: context.params.profile, profile: current_user
   if object.valid
