--- a/app/views/pages/items/update.liquid
+++ b/app/views/pages/items/update.liquid
@@ -2,27 +2,20 @@
 method: post
 ---
 {% liquid
-  include 'lib/must_be_authenticated'
-  function current_user = 'lib/data/queries/profiles/find', user_id: context.current_user.id
+  function current_user = 'lib/current_profile', user_id: context.current_user.id, required: true
 
-  function_rc item = 'lib/data/queries/items/find', id: context.params.item.id
+  function item = 'lib/data/queries/items/find', id: context.params.item.id
   include 'lib/can_edit', user_id: current_user.id, item: item
 
-  function_rc object = 'lib/commands/items/update/build', object: context.params.item
-  function_rc object = 'lib/commands/items/update/check', object: object
-
+  function object = 'lib/commands/items/update', object: context.params.item
   if object.valid
-    function_rc object = 'lib/commands/items/update/execute', object: object
+    include 'lib/commands/events/create', type: 'item_updated', actor_id: current_user.id, object_id: object.id
 
-    if object.valid
-      include 'lib/commands/events/create', type: 'item_updated', actor_id: current_user.id, object_id: object.id
-
-      function_rc url = 'link_to', path: '/items/', item: object
-      include 'redirect_to', url: url, notice: 'app.items.updated'
-    endif
+    function url = 'link_to', path: '/items/', item: object
+    include 'redirect_to', url: url, notice: 'app.items.updated'
   else
-    function_rc filters = 'lib/data/queries/search/filters', query: context.params
-    function_rc presigned_url = 'lib/data/queries/presigned_url'
+    function filters = 'lib/data/queries/search/filters', query: context.params
+    function presigned_url = 'lib/data/queries/presigned_url'
 
     include 'theme/simple/items/edit', item: object, lib: filters, presigned_url: presigned_url
   endif
