--- a/app/views/partials/lib/commands/items/create.liquid
+++ b/app/views/partials/lib/commands/items/create.liquid
@@ -1,10 +1,10 @@
 {%  liquid
-  function_rc object = 'lib/commands/items/create/build', object: context.params.item, owner: context.current_user.id
-  function_rc object = 'lib/commands/items/create/check', object: object
+  function object = 'lib/commands/items/create/build', object: object, owner: owner
+  function object = 'lib/commands/items/create/check', object: object
 
   if object.valid
-    function_rc object = 'lib/commands/items/create/execute', object: object
+    function object = 'lib/commands/items/create/execute', object: object
   endif
 
-  return_rc object
+  return object
 %}
