--- a/app/views/partials/theme/simple/profile/user_card.liquid
+++ b/app/views/partials/theme/simple/profile/user_card.liquid
@@ -1,5 +1,5 @@
 <div class="p-4 md:w-1/3">
-  <div class="h-full border-2 border-gray-200 rounded-lg overflow-hidden pt-5">
+  <div class="h-full border-2 border-gray-200 rounded-lg overflow-hidden pt-5 bg-white">
     {% liquid
       assign img_url = user.avatar.photo.versions.small
       unless img_url
