--- a/app/views/pages/profile/index.liquid
+++ b/app/views/pages/profile/index.liquid
@@ -26,7 +26,7 @@ slug: profile
     function list = 'lib/data/queries/activities/search', feed: 'user-public', feed_id: profile.id, limit: 100
     function presigned_url = 'lib/data/queries/presigned_url'
   elsif section == 'groups'
-    function list = 'lib/data/queries/relationships/search', limit: 20, name: 'membership', l_id: profile_id
+    function list = 'lib/data/queries/groups/search_for_member', limit: 20, name: 'membership', member_id: profile_id
   elsif section == 'following'
     function list = 'lib/data/queries/relationships/search', limit: 20, name: 'followship', l_id: profile_id
   elsif section == 'followers'
