--- a/app/views/partials/theme/simple/groups/card.liquid
+++ b/app/views/partials/theme/simple/groups/card.liquid
@@ -1,6 +1,6 @@
-{% function_rc group_url = 'link_to', path: '/groups/', item: group %}
+{% function_rc group_url = 'link_to', path: '/groups/show/', item: group %}
 <div class="p-4 md:w-1/3">
-  <div class="h-full border-2 border-gray-200 rounded-lg overflow-hidden">
+  <div class="h-full border-2 border-gray-200 rounded-lg overflow-hidden bg-white">
     <img class="lg:h-48 md:h-36 w-full object-cover object-center" src="{{ group.main_photo.photo.versions.small | default: 'https://dummyimage.com/720x400' }}" alt="blog">
 
     <div class="p-6">
@@ -12,13 +12,7 @@
       </h1>
       <p class="leading-relaxed mb-3">{{group.summary}}</p>
       <div class="flex items-center flex-wrap ">
-        <a class="text-indigo-500 inline-flex items-center md:mb-2 lg:mb-0">
-          Join
-          <svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
-            <path d="M5 12h14"></path>
-            <path d="M12 5l7 7-7 7"></path>
-          </svg>
-        </a>
+        {% render 'theme/simple/groups/join_button', current_user: current_user, group: group %}
         <span class="text-gray-600 mr-3 inline-flex items-center lg:ml-auto md:ml-0 ml-auto leading-none text-sm pr-3 py-1 border-r-2 border-gray-300">
           <svg class="w-4 h-4 mr-1" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24">
             <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path>
