Group: join button on group page

--- a/app/views/pages/groups/about.liquid
+++ b/app/views/pages/groups/about.liquid
@@ -1,14 +1,15 @@
 {% liquid
-  assign id = context.params.slug3 | split: '-' | last
+  assign group_id = context.params.slug3 | split: '-' | last
 
-  function_rc group = 'lib/data/queries/groups/find', id: id, with_owner: true
+  function_rc group = 'lib/data/queries/groups/find', id: group_id, with_owner: true
 
   unless group.id
     render 'theme/simple/404', status: 404
     break
   endunless
 
-  function_rc current_user = 'lib/data/queries/profiles/find', user_id: context.current_user.id
+  function current_user = 'lib/data/queries/profiles/find', user_id: context.current_user.id, membership: true
 
   include 'theme/simple/groups/show', group: group, current_user: current_user, tab: 'about'
+  render 'theme/simple/groups/join.js', authenticity_token: context.authenticity_token
 %}
