--- a/app/views/partials/theme/simple/groups/nav.liquid
+++ b/app/views/partials/theme/simple/groups/nav.liquid
@@ -12,8 +12,6 @@
       </a>
     </div>
     <div class="flex p-3">
-      <a class="button">
-        Join
-      </a>
+      {% render 'theme/simple/groups/join_button', group: group, current_user: current_user %}
     </div>
   </nav>
