--- a/app/views/partials/theme/simple/groups/show.liquid
+++ b/app/views/partials/theme/simple/groups/show.liquid
@@ -7,7 +7,7 @@
       {{group.summary}}
     </h2>
   </div>
-  {% render 'theme/simple/groups/nav', group: group, tab: tab %}
+  {% render 'theme/simple/groups/nav', group: group, tab: tab, current_user: current_user %}
 
   <div>
     {% liquid
