--- a/app/views/pages/groups/index.liquid
+++ b/app/views/pages/groups/index.liquid
@@ -4,7 +4,7 @@ slug: groups
 {% liquid
   include 'lib/must_be_authenticated'
 
-  function current_user = 'lib/data/queries/profiles/find', user_id: context.current_user.id
+  function current_user = 'lib/data/queries/profiles/find', user_id: context.current_user.id, membership: true
   function list = 'lib/data/queries/groups/search', limit: 100
 
   include 'theme/simple/groups/cards', current_user: current_user, list: list
