--- a/app/views/pages/groups/members.liquid
+++ b/app/views/pages/groups/members.liquid
@@ -9,8 +9,9 @@
     break
   endunless
 
-  function current_user = 'lib/data/queries/profiles/find', user_id: context.current_user.id
+  function current_user = 'lib/data/queries/profiles/find', user_id: context.current_user.id, membership: true
   function list = 'lib/data/queries/relationships/search', limit: 20, name: 'membership', r_id: group_id
 
   include 'theme/simple/groups/show', group: group, current_user: current_user, tab: 'members', list: list, context: context
+  render 'theme/simple/groups/join.js', authenticity_token: context.authenticity_token
 %}
