--- a/app/views/pages/groups/show.liquid
+++ b/app/views/pages/groups/show.liquid
@@ -17,4 +17,5 @@ slug: groups/show
   function presigned_url = 'lib/data/queries/presigned_url'
 
   include 'theme/simple/groups/show', group: group, current_user: current_user, tab: 'activity', list: list, context: context, presigned_url: presigned_url
+  render 'theme/simple/groups/join.js', authenticity_token: context.authenticity_token
 %}
