--- a/app/views/partials/lib/data/queries/profiles/find.liquid
+++ b/app/views/partials/lib/data/queries/profiles/find.liquid
@@ -3,6 +3,12 @@
     return null
   endif
 
+  if membership == null
+    assign membership = false
+  endif
+  if followships == null
+    assign followships = false
+  endif
   graphql r  = 'profiles/search', limit: 1, uuid: uuid, slug: slug, id: id, user_id: user_id, followships: followships, membership: membership
   include 'lib/handle_graphql_response', r: r, name: 'queries/profiles/find'
 
