--- a/app/views/partials/lib/commands/groups/create/check.liquid
+++ b/app/views/partials/lib/commands/groups/create/check.liquid
@@ -15,6 +15,11 @@
 
   if object.description == blank
     include 'lib/register_error', contract: c, field_name: 'description', key: 'app.errors.blank'
+  else
+    if object.description.size < 100
+      assign msg = 'app.errors.too_little' | t: value: 100
+      include 'lib/register_error', contract: c, field_name: 'description', message: msg
+    endif
   endif
 
   if object.uuid == blank
