--- a/app/views/partials/lib/commands/relationships/delete.liquid
+++ b/app/views/partials/lib/commands/relationships/delete.liquid
@@ -3,7 +3,7 @@
   function object = 'lib/commands/relationships/delete/check', object: object
 
   if object.valid
-    function object = 'lib/commands/execute', mutation_name: 'relationships/delete' args: object, selection: 'model_delete'
+    function object = 'lib/commands/execute', mutation_name: 'relationships/delete' object: object, selection: 'model_delete'
   endif
 
   return_rc object
